--- a/styles/design-system/variables.css
+++ b/styles/design-system/variables.css
@@ -89,6 +89,19 @@
   --container-lg: 1024px;
   --container-xl: 1280px;
   --container-2xl: 1536px;
+
+  /* Neutral Colors */
+  --color-neutral-50: #F9FAFB;
+  --color-neutral-100: #F5F6F7;
+  --color-neutral-200: #E4E7EB;
+  --color-neutral-300: #D4D7DE;
+  --color-neutral-400: #B0B8C4;
+  --color-neutral-500: #8C96A6;
+  --color-neutral-600: #5A697B;
+  --color-neutral-700: #425062;
+  --color-neutral-800: #2E384D;
+  --color-neutral-900: #1A202C;
+  --color-neutral-950: #0D1017;
 }
 
 /* Component-specific Variables */
